--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ html, body{
 	border: 1px solid #000;
 	color: #fff;
 }
-#progressBar{
+.progressBar2 {
 	width: 500;
 	height: 10px;
 	border-radius: 5px;
